k8s/networkpolicies/nP2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata: 
  name: allow-nodejs-to-mongodb
  namespace: dev 
spec: 
  podSelector: 
    matchLabels:
      app: mongodb 
  policyTypes: 
   - Ingress 
  ingress:
   - from: 
        - podSelector:
            matchLabels:
             app: myapp
     ports: 
        - protocol: TCP 
          port: 27017
